Use ArrayList instead of LinkedList where possible